--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@keyframes scroll {
+  0% {
+      transform: translateX(0);
+  }
+  100% {
+      transform: translateX(-50%); /* Since we doubled the list, we move by -50% */
+  }
+}
+
+.animate-scroll {
+  animation: scroll 12s linear infinite;
+  display: inline-flex;
+}
+.custom-image-container img {
+  height: 8rem; /* Fixed height */
+  width: auto; /* Fixed width to match the height, ensures a square shape */
+  object-fit: cover; /* Ensures the image covers the area without stretching. If part of the image can be cropped, use 'cover' */
+  border-radius: 0.5rem; /* Optional: Adds rounded corners */
+}
