--- a/src/index.css
+++ b/src/index.css
@@ -17,22 +17,24 @@ code {
     monospace;
 }
 
+
+/* Scroll Bar for Home Page */
 @keyframes scroll {
   0% {
-      transform: translateX(0);
+    transform: translateX(0);
   }
   100% {
-      transform: translateX(-50%); /* Since we doubled the list, we move by -50% */
+    transform: translateX(-50%);
   }
 }
 
 .animate-scroll {
-  animation: scroll 12s linear infinite;
-  display: inline-flex;
+  animation: scroll 20s linear infinite;
+  display: flex;
 }
 .custom-image-container img {
-  height: 8rem; /* Fixed height */
-  width: auto; /* Fixed width to match the height, ensures a square shape */
-  object-fit: cover; /* Ensures the image covers the area without stretching. If part of the image can be cropped, use 'cover' */
+  height: 12rem; /* Fixed height */
+  width: 16rem; /* Fixed width */
+  object-fit: contain; /* Ensures the entire image fits within the given dimensions without cropping, maintaining its aspect ratio */
   border-radius: 0.5rem; /* Optional: Adds rounded corners */
 }
