--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background: radial-gradient(circle at center, #31333f, #000300); /* Radial gradient from #31333f to #000300 */
+  background: radial-gradient(circle at center, #000d2dd7, #011e1a); /* Radial gradient from #31333f to #000300 */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
